add svcs section, button, etc

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 }
 
 .intro-lead-in {
-  font-family: "Droid Serif", "Helvetica Neue", sans-serif;
+  font-family: "Merriweather", "Helvetica Neue", sans-serif;
   font-style: italic;
   font-size: 40px;
   line-height: 40px;
